# numba

./: .clang-format  CMakeLists.txt  Cargo.toml  build.rs
inc/: Matrix.hh  Model.hh  err.cuh  numba.hh  raylib.h
src/: Matrix.cu  Model.cc  cuda.cu  cuda.rs  loader.cc  main.rs  matrix.cu  matrix.rs  model.rs  numba.cc  numba.rs
test/: num_allocs
